--- a/src/components/plasmic/blank_website_mobile_first/PlasmicHomepage.module.css
+++ b/src/components/plasmic/blank_website_mobile_first/PlasmicHomepage.module.css
@@ -54,14 +54,26 @@
 @media (min-width: 768px) {
   .section {
     height: 100vh;
-    align-content: space-between;
+    align-content: flex-start;
     background: #ffffff;
+    justify-items: center;
     padding: 40px;
   }
 }
 @media (min-width: 768px) {
   .section > * {
     grid-column: 4;
+  }
+}
+.timer:global(.__wab_instance) {
+  max-width: 100%;
+  object-fit: cover;
+  position: relative;
+  display: none;
+}
+@media (min-width: 768px) {
+  .timer:global(.__wab_instance) {
+    display: flex;
   }
 }
 .text___6VnAs {
@@ -177,18 +189,25 @@
 .freeBox___8YSnH {
   display: flex;
   position: relative;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
   width: 100%;
   height: auto;
   max-width: 100%;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
   min-width: 0;
   padding: 8px;
 }
 @media (min-width: 768px) {
   .freeBox___8YSnH {
     justify-content: space-between;
+    height: 100vh;
+    flex-grow: 1;
+    flex-shrink: 1;
+    left: auto;
+    top: auto;
+    z-index: 1;
+    position: relative;
     padding: 0px;
   }
 }
@@ -212,6 +231,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    flex-shrink: 1;
     min-height: 0;
   }
 }
@@ -329,37 +349,4 @@
   object-fit: cover;
   width: auto;
   height: 1em;
-}
-.button__zftkE:global(.__wab_instance) {
-  max-width: 100%;
-  position: relative;
-  display: none;
-}
-@media (min-width: 768px) {
-  .button__zftkE:global(.__wab_instance) {
-    display: none;
-  }
-}
-.svg__mGdRo {
-  position: relative;
-  object-fit: cover;
-  width: auto;
-  height: 1em;
-}
-.svg___78BX2 {
-  position: relative;
-  object-fit: cover;
-  width: auto;
-  height: 1em;
-}
-.timer:global(.__wab_instance) {
-  max-width: 100%;
-  object-fit: cover;
-  position: relative;
-  display: none;
-}
-@media (min-width: 768px) {
-  .timer:global(.__wab_instance) {
-    display: flex;
-  }
 }
