--- a/src/components/plasmic/blank_website_mobile_first/PlasmicBubble.module.css
+++ b/src/components/plasmic/blank_website_mobile_first/PlasmicBubble.module.css
@@ -2,8 +2,8 @@
   display: flex;
   position: relative;
   flex-direction: row;
-  align-items: stretch;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: flex-end;
   width: 100%;
   height: auto;
   max-width: 100%;
@@ -11,7 +11,7 @@
   padding: 0px;
 }
 .rootnotMe {
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
 }
 .freeBox__kJeA {
@@ -21,19 +21,29 @@
   justify-content: flex-start;
   width: auto;
   height: auto;
-  max-width: 100%;
+  max-width: 80%;
+  background: #0d99ff;
+  border-radius: 16px 16px 0px;
   padding: 8px;
-  border-width: 1px;
-  border-style: solid;
+  border: 1px solid transparent;
 }
 .freeBoxnotMe__kJeAp7DnS {
-  background: #0000000a;
+  background: #ffffff;
+  border-bottom-right-radius: 16px;
+  border-bottom-left-radius: 0px;
+  border-style: solid;
+  border-color: #000000;
 }
 .text__kir72 {
   width: 100%;
   height: auto;
   opacity: 0.5;
+  color: #ffffff;
+  font-size: 12px;
   min-width: 0;
+}
+.textnotMe__kir72P7DnS {
+  color: #000000;
 }
 .freeBox__bs8P {
   display: flex;
@@ -47,17 +57,11 @@
   min-width: 0;
   padding: 0px;
 }
-.text__xuVjm {
-  width: auto;
-  height: auto;
-}
-.text__pivq5 {
-  position: relative;
-  width: auto;
-  height: auto;
-  max-width: 100%;
-}
 .text__icPsB {
   width: auto;
   height: auto;
+  color: #ffffff;
+}
+.textnotMe__icPsBp7DnS {
+  color: #000000;
 }
