--- a/src/components/plasmic/blank_website_mobile_first/PlasmicTextInput.module.css
+++ b/src/components/plasmic/blank_website_mobile_first/PlasmicTextInput.module.css
@@ -8,8 +8,9 @@
   background: #ffffff;
   position: sticky;
   min-width: 0;
-  padding: 7px 11px;
-  border: 1px solid #000000;
+  border-radius: 6px;
+  padding: 6px 6px 6px 12px;
+  border: 1px solid #00000099;
 }
 .rootcolor_dark {
   background: #232320;
